# tooeasy

./: index.html  package-lock.json  package.json  panel.html  vite.config.ts
.github/workflows/: build.yml
src/: globals.css  main.tsx  panel-main.tsx
src-tauri/: Cargo.toml  Info.plist  build.rs  tauri.conf.json  tauri.macos.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/migrations/: 001_init.sql
src-tauri/src/: active_app_detector.rs  clipboard_watcher.rs  file_manager.rs  lib.rs  license_manager.rs  main.rs  paste_manager.rs
src/components/: AnnotationCanvas.tsx  FloatingPanel.tsx  LiquidGlass.tsx
src/lib/: apps.ts  tauri.ts
src/pages/: gallery.tsx  panel.tsx
