[package]
name = "tooeasy"
version = "1.0.0"
description = "TooEasy — screenshot tool"
authors = ["TooEasy"]
edition = "2021"

[lib]
name = "tooeasy_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["protocol-asset", "macos-private-api", "tray-icon", "image-png"] }
tauri-plugin-opener = "2"
tauri-plugin-fs = "2"
tauri-plugin-sql = { version = "2", features = ["sqlite"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
arboard = "3"
image = { version = "0.25", default-features = false, features = ["png", "bmp"] }
base64 = "0.22"
uuid = { version = "1", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }
tokio = { version = "1", features = ["full"] }
notify = { version = "6" }
trash = "3"

[target.'cfg(target_os = "macos")'.dependencies]
notify = { version = "6", features = ["macos_fsevent"] }
cocoa = "0.26"
objc = "0.2"

[target.'cfg(target_os = "windows")'.dependencies]
windows = { version = "0.58", features = [
    "Win32_Foundation",
    "Win32_UI_Input_KeyboardAndMouse",
    "Win32_UI_WindowsAndMessaging",
    "Win32_System_Threading",
    "Win32_System_ProcessStatus",
    "Win32_System_DataExchange",
] }
